--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.6.12",
     "vue-meta": "^2.3.3",
     "vue-router": "^3.1.6",
-    "vuetify": "^2.3.17"
+    "vuetify": "^2.3.17",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
